--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,49 @@
     padding: 0;
 }
 body{
-     display: flex;
-     width: 80vw; 
+     /* display: flex; */
+    width: 100vw; 
     height: 100vh;
     background-color: antiquewhite;
 }
-/* h3{
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+h1{
     font-size: 24px;
     line-height: 50px;
-} */
-/* .container {
-	height: 100vh;
-    width: 60vh;
-} */
+    /* background-color: aqua; */
+} 
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    width: 100vw;
+    /* background-color: aqua; */
+}
+.scrore-panel{
+    display: flex;
+    /* justify-content: space-around; */
+}
+.stars{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style: none;
+    margin-right: 10px;
+    color: rgb(228, 228, 61);
+    font-size: 20px;
+}
+.moves{
+    font-size: 18px;
+    /* font-weight: 500; */
+}
 .game{
     width: 80vw;
     height: 80vh;
@@ -25,18 +55,22 @@ body{
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
+    /* background-color: aquamarine; */
  }
 .card{
     width:calc(25% - 10px ); 
-    height:calc(33.33% -10px);
+    height:calc(33.33% - 10px);
     margin: 5px;
     position: relative;
-   border: 2px solid aqua;
+   /* border: 2px solid aqua; */
    transform-style: preserve-3d;
    transition:transform .5s;
 }
 .card.flip{
  transform: rotateY(180deg);
+}
+.card:hover{
+    box-shadow: inset 0 0 0 1px aqua;
 }
 .card:active{
     transform: scale(.97);
@@ -48,7 +82,6 @@ body{
     padding: 20px;
     position: absolute;
     border-radius: 5px;
-    background: #1c7ccc;
     backface-visibility: hidden;
 }
 .font-face{
